# salai

./: check_rdkit.py  chemical_databases.py  main.py  protein_interaction.py  pyproject.toml  requirements.txt  salai.py
GraphDTA/: inference_utils.py
